<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sz</groupId>
    <artifactId>sz-boot-parent</artifactId>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.sz</groupId>
        <artifactId>sz-build</artifactId>
        <version>${revision}</version>
        <relativePath>./sz-build/pom.xml</relativePath>
    </parent>

    <modules>
        <module>sz-common</module>
        <module>sz-module</module>
        <module>sz-service</module>
    </modules>

    <!--配置全局属性-->
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <skipTests>true</skipTests>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块版本统一收敛，子模块新增依赖时优先省略 version。 -->
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-db-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-db-mysql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-db-postgresql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-db-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-db-mongodb</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-mq</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-log</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-common-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz.wechat</groupId>
                <artifactId>sz-common-wechat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz.excel</groupId>
                <artifactId>sz-common-excel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz.oss</groupId>
                <artifactId>sz-common-oss</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz.resource</groupId>
                <artifactId>sz-common-resource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-module-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-module-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-module-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-service-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sz</groupId>
                <artifactId>sz-service-websocket</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--maven仓库加速，按需引用-->
   <!-- <repositories>
        &lt;!&ndash;阿里云仓库&ndash;&gt;
        <repository>
            <id>public</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        &lt;!&ndash;华为云仓库&ndash;&gt;
        <repository>
            <id>huaweicloudmaven</id>
            <url>https://repo.huaweicloud.com/maven/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        &lt;!&ndash;腾讯云仓库&ndash;&gt;
        <repository>
            <id>tencentcloudmaven</id>
            <url>https://mirrors.tencent.com/nexus/repository/maven-public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        &lt;!&ndash;中科大仓库&ndash;&gt;
        <repository>
            <id>ustcmaven</id>
            <url>https://maven.ustc.edu.cn/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        &lt;!&ndash; 配置官方Maven中央仓库 &ndash;&gt;
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>-->

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.44.5</version>
                <configuration>
                    <java>
                        <encoding>UTF-8</encoding>
                        <eclipse>
                            <file>sz-build/baeldung-style.xml</file>
                        </eclipse>
                        <removeUnusedImports/>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
